[KeyboardDaemon] Don't call getCurrentLayout() in destructor

It does X calls and might crash kded on logout.
Since we already have a currentLayout member, there's no need to get it afresh.

BUG: 364340
FIXED-IN: 5.8.0

Differential Revision: https://phabricator.kde.org/D2818